--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,37 @@
+beautifulsoup4==4.12.3
 blinker==1.8.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
+contourpy==1.2.1
+cycler==0.12.1
+dominate==2.9.1
 Flask==3.0.3
+Flask-Bootstrap==3.3.7.1
+fonttools==4.53.1
+geojson==3.1.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
+kiwisolver==1.4.5
+lxml==5.2.2
 MarkupSafe==2.1.5
+matplotlib==3.9.1
+numpy==2.0.1
+OSMPythonTools==0.3.5
+packaging==24.1
+pandas==2.2.2
+pillow==10.4.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.1
 requests==2.32.3
+six==1.16.0
+soupsieve==2.5
+tzdata==2024.1
+ujson==5.10.0
 urllib3==2.2.2
+visitor==0.1.3
 Werkzeug==3.0.3
+xarray==2024.6.0
